# DevForge-AI

./: .env.example  .gitignore  AUDIT.md  CHANGELOG.md  KAGGLE_WRITEUP.md  README.md
apps/backend/: README.md  config.py  demo.py  logging_config.py  main.py  pyproject.toml
apps/backend/agents/: __init__.py  base.py  ceo.py  exceptions.py  interfaces.py  llm_adapter.py  mock_agents.py  models.py  registry.py
apps/backend/agents/architecture/: __init__.py  principal_architect.py
apps/backend/agents/engineering/: __init__.py  backend_lead.py  frontend_lead.py
apps/backend/agents/planning/: __init__.py  design_lead.py  market_analyst.py  product_lead.py
apps/backend/agents/review/: __init__.py  engineering_director.py
apps/backend/agents/validation/: __init__.py  platform_engineer.py  qa_lead.py  security_lead.py
apps/backend/api/: __init__.py  middleware.py  router.py
apps/backend/api/routes/: health.py  projects.py
apps/backend/context/: __init__.py  manager.py  schema.py
apps/backend/generator/: __init__.py  pipeline.py
apps/backend/mcp/: __init__.py  client.py  exceptions.py  filesystem.py  github.py
apps/backend/orchestrator/: __init__.py  orchestrator.py
apps/backend/prompts/: __init__.py  backend_lead.md  ceo.md  design_lead.md  engineering_director.md  frontend_lead.md  manager.py  market_analyst.md  platform_engineer.md  principal_architect.md  product_lead.md  qa_lead.md  security_lead.md
apps/backend/storage/: __init__.py
apps/backend/tools/: __init__.py
docs/: FINAL_TECHNICAL_AUDIT.md  PRD.md  PROJECT_AUDIT.md  (+1 more)
scripts/: .gitkeep
(+19 files in other folders)
